Basic JS skeleton setup

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <script type="text/javascript" src="libs/c3/c3.js"></script>
     <!-- endbuild -->
     <!-- This is the main visualization script loaded through RequireJS -->
-    <script data-main="scripts/visualization" src="libs/requirejs/require.js"></script>
+    <script data-main="js/visualization" src="libs/requirejs/require.js"></script>
 
 
     <!--
