--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
     <link href="libs/fontawesome/css/font-awesome.css" rel="stylesheet">
     <link href="libs/select2/select2.css" rel="stylesheet">
     <link href="libs/select2/select2-bootstrap.css" rel="stylesheet">
-    <link href="libs/dcjs/dc.css" rel="stylesheet">
     <!-- endbuild -->
     <!-- build:css build/main.min.css -->
     <link href="css/general.css" rel="stylesheet">
@@ -144,8 +143,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-8 col-sm-12" id="chart1">
+        <div class="col-md-8 col-sm-12">
           <!-- A chart could go here... -->
+          <div id="chart1"></div>
         </div>
         <div class="col-md-4 col-sm-12" id="keyFindings">
 
@@ -191,8 +191,8 @@
     <script type="text/javascript" src="libs/bootstrap/dist/js/bootstrap.js"></script>
     <script type="text/javascript" src="libs/d3/d3.js"></script>
     <script type="text/javascript" src="libs/crossfilter/crossfilter.js"></script>
-    <script type="text/javascript" src="libs/dcjs/dc.js"></script>
     <script type="text/javascript" src="libs/select2/select2.js"></script>
+    <script type="text/javascript" src="libs/FileSaver/FileSaver.min.js"></script>
     <!-- endbuild -->
     <!-- This is the main visualization script loaded through RequireJS -->
     <script data-main="js/viz" src="libs/requirejs/require.js"></script>
