--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           "About" and "Contact" are provided by default. Make sure you write the HTML files
           in the pages subfolder and configure links below.
     -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top active">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -98,7 +98,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">BIS Data Visualization Template</a>
+          <a class="navbar-brand" href="#"><img src="img/image-BISLogo-landscapecolour-png.mod.png"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -127,7 +127,6 @@
        / /|_/ // _ `// // _ \  / __// _ \ / _ \/ __// _ `// // _ \/ -_)/ __/
       /_/  /_/ \_,_//_//_//_/  \__/ \___//_//_/\__/ \_,_//_//_//_/\__//_/
       @@
-
     -->
     <div class="container-fluid" id="mainContainer">
       <!--
@@ -136,26 +135,99 @@
         screen sizes, resulting in a responsive layout.
       -->
       <div class="row">
-        <div class="col-md-12" id="filters">
+        <div class="col-md-12">
+          <h1 class="page-header">Data Visualization Template</h1>
+        </div>
+        <div class="col-md-1">
+          <p>Data filters:</p>
+        </div>
+        <div class="col-md-11" class="filters">
           <!-- Some filters perhaps... -->
-          <div id="periodFilter"></div>
           <div id="qFilter"></div>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-8 col-sm-12">
-          <!-- A chart could go here... -->
-          <div id="chart1"></div>
+        <div class="col-md-6 col-sm-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <!-- Dropdown menu with download options (remove what you don't want) -->
+              <div class="dropdown chart-options">
+                <button class="btn btn-default dropdown-toggle btn-xs" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  <span class="glyphicon glyphicon-cog"></span>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-right chart-option-menu" aria-labelledby="dropdownMenu1">
+                  <li><a href="#" class="downloadSvg">Download chart as SVG</a></li>
+                  <li><a href="#" class="downloadCsv">Download data in CSV</a></li>
+                </ul>
+              </div>
+              <h3 class="panel-title">Simple bar chart</h3>
+            </div>
+            <div class="panel-body">
+              <div id="chart1"></div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-4 col-sm-12" id="keyFindings">
-
+        <div class="col-md-6 col-sm-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Key findings (text)</h3>
+            </div>
+            <div class="panel-body">
+              <h1>1.0 First level heading</h1>
+              <h2>1.1 Second level heading</h2>
+              <h3>1.1.1 Third level heading</h3>
+              <p class="lead">Lead text, Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <p>You can use lists and text elements like:</p>
+              <ol>
+                <li><strong>Bold text</strong></li>
+                <li><em>Italic text</em></li>
+                <li><u>Undelined text</u></li>
+                <li><s>Strikeout text</s></li>
+                <li><mark>Highglighted text</mark></li>
+                <li><small>Small text</small></li>
+                <li>Abbreviations: <abbr title="Department for Business Innovation and Skills">BIS</abbr></li>
+                <li>Inline code: <code>d3.max([3,6,8,10])</code></li>
+                <li>Keyboard commmands: To copy press <kbd><kbd>ctrl</kbd> + <kbd>c</kbd></kbd></li>
+              </ol>
+            </div>
+          </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 well" id="myKeyF">
-          <!-- Some key findings might go here... -->
-          <h3>Key Findings</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at lobortis quam. Curabitur bibendum aliquet est laoreet placerat. Praesent sollicitudin lacus in mi hendrerit tempor...</p>
+        <div class="col-md-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Table</h3>
+            </div>
+            <div class="panel-body">
+              Table goes here
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">More text styles</h3>
+            </div>
+            <div class="panel-body">
+              <blockquote>
+                <p>Blockquotes can be used to highlight quotes.</p>
+                <footer>An old wise man <cite title="Source Title">The book of typography</cite></footer>
+              </blockquote>
+              <p>Definition lists:</p>
+              <dl class="dl-horizontal">
+                <dt>Exports</dt>
+                <dd>The total value of goods exported by the country.</dd>
+                <dt>Imports</dt>
+                <dd>the total value of goods imported by the country.</dd>
+              </dl>
+              <p>Standard text paragraphs: Proin at lobortis quam. Curabitur bibendum aliquet est laoreet placerat. Praesent sollicitudin lacus in mi hendrerit tempor. Etiam posuere mollis elementum. Aenean porta faucibus varius. Nulla tempus tellus a leo commodo consectetur. Fusce quis leo ac elit porttitor imperdiet. Pellentesque dictum tempus porta. Donec gravida orci eget diam accumsan lobortis. Nulla facilisi. Proin imperdiet gravida magna eget luctus. In hac habitasse platea dictumst. Sed consequat nisl et arcu gravida sit amet lacinia eros suscipit. Nam interdum ipsum non elit accumsan dictum. Ut arcu metus, vestibulum ut gravida id, imperdiet vitae leo.</p>
+              <div class="well">
+                <p>Wells are another way to highlight content. then of course you have buttons:</p>
+                <a class="btn btn-default btn-lg btn-block" target="_blank" href="http://getbootstrap.com/css/">Check out the full Bootstrap documentation.</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
