--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
         </div>
         <div class="col-md-11" class="filters">
           <!-- Some filters perhaps... -->
+          <div id="periodFilter"></div>
           <div id="qFilter"></div>
+          <div id="gdpFilter"></div>
         </div>
       </div>
       <!-- First line of the visualization -->
@@ -288,6 +290,7 @@
     <script type="text/javascript" src="libs/crossfilter/crossfilter.js"></script>
     <script type="text/javascript" src="libs/select2/select2.js"></script>
     <script type="text/javascript" src="libs/FileSaver/FileSaver.min.js"></script>
+    <script type="text/javascript" src="libs/history.js/scripts/bundled/html4+html5/jquery.history.js"></script>
     <!-- endbuild -->
     <!-- This is the main visualization script loaded through RequireJS -->
     <script data-main="js/viz" src="libs/requirejs/require.js"></script>
