Added URL persistance

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
           <!-- Some filters perhaps... -->
           <div id="periodFilter"></div>
           <div id="qFilter"></div>
+          <div class="clearfix"></div>
           <div id="gdpFilter"></div>
         </div>
       </div>
