--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
     <script type="text/javascript" src="libs/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="libs/bootstrap/dist/js/bootstrap.js"></script>
     <script type="text/javascript" src="libs/d3/d3.js"></script>
+    <script type="text/javascript" src="libs/d3-tip/index.js"></script>
     <script type="text/javascript" src="libs/crossfilter/crossfilter.js"></script>
     <script type="text/javascript" src="libs/select2/select2.js"></script>
     <script type="text/javascript" src="libs/FileSaver/FileSaver.min.js"></script>
