Fixed path for netbeans server

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     <script type="text/javascript" src="libs/crossfilter/crossfilter.js"></script>
     <script type="text/javascript" src="libs/select2/select2.js"></script>
     <script type="text/javascript" src="libs/FileSaver/FileSaver.min.js"></script>
-    <script type="text/javascript" src="libs/history.js/scripts/bundled/html4+html5/jquery.history.js"></script>
+    <script type="text/javascript" src="libs/history.js/scripts/bundled/html4%2Bhtml5/jquery.history.js"></script>
     <!-- endbuild -->
     <!-- This is the main visualization script loaded through RequireJS -->
     <script data-main="js/viz" src="libs/requirejs/require.js"></script>
