Added five col layout and  sample text in modals.

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
 <div class="modal-body">
 
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at lobortis quam. Curabitur bibendum aliquet est laoreet placerat. Praesent sollicitudin lacus in mi hendrerit tempor. Etiam posuere mollis elementum. Aenean porta faucibus varius. Nulla tempus tellus a leo commodo consectetur. Fusce quis leo ac elit porttitor imperdiet. Pellentesque dictum tempus porta. Donec gravida orci eget diam accumsan lobortis. Nulla facilisi. Proin imperdiet gravida magna eget luctus. In hac habitasse platea dictumst. Sed consequat nisl et arcu gravida sit amet lacinia eros suscipit. Nam interdum ipsum non elit accumsan dictum. Ut arcu metus, vestibulum ut gravida id, imperdiet vitae leo.
+    For more information about this please see the <a href="https://github.com/UK-BIS-Analysis/BIS_Viz_Toolkit">readme.md</a> document.
   </p>
 
 </div>
