--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -5,7 +5,7 @@
 <div class="modal-body">
 
   <p>
-    For more information contact: ...@...
+    For more information about the toolkit contact <a href="mailto:me@fm.to.it">me@fm.to.it</a>.
   </p>
 
 </div>
