--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       </div>
 
 
-      <!-- Example 1 Charts -->
+      <!-- Example 1 Charts first row -->
       <div class="row top-buffer row-band-col-1">
         <div class="col-md-6 col-sm-12">
           <!-- Panel with second chart: Stacked bar chart -->
@@ -190,7 +190,7 @@
                   <li><a href="#" id="chart2-downloadCsv">Download data in CSV</a></li>
                 </ul>
               </div>
-              <h3 class="panel-title">Distribution of answers (row chart)</h3>
+              <h3 class="panel-title">Distribution of answers (row-chart)</h3>
             </div>
             <div class="panel-body">
               <p>This is an example of a stacked row chart using the rowchart.js module.</p>
@@ -216,7 +216,7 @@
                   <li><a href="#" id="chart1-downloadCsv">Download data in CSV</a></li>
                 </ul>
               </div>
-              <h3 class="panel-title">Distribution of answers (bar chart)</h3>
+              <h3 class="panel-title">Distribution of answers (stacked bar-chart)</h3>
             </div>
             <div class="panel-body">
               <p>This is the same chart as a bar chart using the barchart.js module.</p>
@@ -229,20 +229,120 @@
 
       <!-- Example 1 Charts second row -->
       <div class="row top-buffer row-band-col-1">
-        <div class="col-md-2 col-sm-12 col-md-offset-1">
-          col
+        <div class="col-md-5ths col-sm-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <!-- Dropdown menu with download options (remove what you don't want) -->
+              <div class="dropdown chart-options">
+                <button class="btn btn-default dropdown-toggle btn-xs" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  <span class="glyphicon glyphicon-cog"></span>
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-right chart-option-menu" aria-labelledby="dropdownMenu1">
+                  <li><a href="#" id="chart3-downloadSvg">Download chart as SVG</a></li>
+                  <li><a href="#" id="chart3-downloadPng">Download chart as PNG</a></li>
+                  <li class="divider"></li>
+                  <li><a href="#" id="chart3-downloadCsv">Download data in CSV</a></li>
+                </ul>
+              </div>
+              <h3 class="panel-title">Strongly agree</h3>
+            </div>
+            <div class="panel-body">
+              <div id="chart3-barchart"></div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-2 col-sm-12">
-          col
+        <div class="col-md-5ths col-sm-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <!-- Dropdown menu with download options (remove what you don't want) -->
+              <div class="dropdown chart-options">
+                <button class="btn btn-default dropdown-toggle btn-xs" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  <span class="glyphicon glyphicon-cog"></span>
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-right chart-option-menu" aria-labelledby="dropdownMenu1">
+                  <li><a href="#" id="chart4-downloadSvg">Download chart as SVG</a></li>
+                  <li><a href="#" id="chart4-downloadPng">Download chart as PNG</a></li>
+                  <li class="divider"></li>
+                  <li><a href="#" id="chart4-downloadCsv">Download data in CSV</a></li>
+                </ul>
+              </div>
+              <h3 class="panel-title">Agree</h3>
+            </div>
+            <div class="panel-body">
+              <div id="chart4-barchart"></div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-2 col-sm-12">
-          col
+        <div class="col-md-5ths col-sm-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <!-- Dropdown menu with download options (remove what you don't want) -->
+              <div class="dropdown chart-options">
+                <button class="btn btn-default dropdown-toggle btn-xs" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  <span class="glyphicon glyphicon-cog"></span>
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-right chart-option-menu" aria-labelledby="dropdownMenu1">
+                  <li><a href="#" id="chart5-downloadSvg">Download chart as SVG</a></li>
+                  <li><a href="#" id="chart5-downloadPng">Download chart as PNG</a></li>
+                  <li class="divider"></li>
+                  <li><a href="#" id="chart5-downloadCsv">Download data in CSV</a></li>
+                </ul>
+              </div>
+              <h3 class="panel-title">Neither ...</h3>
+            </div>
+            <div class="panel-body">
+              <div id="chart5-barchart"></div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-2 col-sm-12">
-          col
+        <div class="col-md-5ths col-sm-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <!-- Dropdown menu with download options (remove what you don't want) -->
+              <div class="dropdown chart-options">
+                <button class="btn btn-default dropdown-toggle btn-xs" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  <span class="glyphicon glyphicon-cog"></span>
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-right chart-option-menu" aria-labelledby="dropdownMenu1">
+                  <li><a href="#" id="chart6-downloadSvg">Download chart as SVG</a></li>
+                  <li><a href="#" id="chart6-downloadPng">Download chart as PNG</a></li>
+                  <li class="divider"></li>
+                  <li><a href="#" id="chart6-downloadCsv">Download data in CSV</a></li>
+                </ul>
+              </div>
+              <h3 class="panel-title">Disagree</h3>
+            </div>
+            <div class="panel-body">
+              <div id="chart6-barchart"></div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-2 col-sm-12">
-          col
+        <div class="col-md-5ths col-sm-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <!-- Dropdown menu with download options (remove what you don't want) -->
+              <div class="dropdown chart-options">
+                <button class="btn btn-default dropdown-toggle btn-xs" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  <span class="glyphicon glyphicon-cog"></span>
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-right chart-option-menu" aria-labelledby="dropdownMenu1">
+                  <li><a href="#" id="chart7-downloadSvg">Download chart as SVG</a></li>
+                  <li><a href="#" id="chart7-downloadPng">Download chart as PNG</a></li>
+                  <li class="divider"></li>
+                  <li><a href="#" id="chart7-downloadCsv">Download data in CSV</a></li>
+                </ul>
+              </div>
+              <h3 class="panel-title">Strongly disagree</h3>
+            </div>
+            <div class="panel-body">
+              <div id="chart7-barchart"></div>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -296,9 +396,10 @@
       <!-- Bootstrap examples -->
       <div class="row row-band-col-5">
         <div class="col-md-12">
+          <h2>Bootstrap sample styles available for re-use</h2>
           <div class="panel panel-default">
             <div class="panel-heading">
-              <h3 class="panel-title">Bootstrap sample styles available for re-use</h3>
+              <h3 class="panel-title">Panel</h3>
             </div>
             <div class="panel-body">
               <h1>1.0 First level heading</h1>
@@ -340,7 +441,7 @@
                   <div class="panel-heading" role="tab" id="headingOne">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        GDP
+                        First
                       </a>
                     </h4>
                   </div>
@@ -354,7 +455,7 @@
                   <div class="panel-heading" role="tab" id="headingTwo">
                     <h4 class="panel-title">
                       <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        Bla
+                        Second
                       </a>
                     </h4>
                   </div>
@@ -368,7 +469,7 @@
                   <div class="panel-heading" role="tab" id="headingThree">
                     <h4 class="panel-title">
                       <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        Collapsible Group Item #3
+                        Third
                       </a>
                     </h4>
                   </div>
