Fixed baseline alignment of bar charts and renamed charts

--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
 
       <!-- Example 1 filters -->
       <div class="row top-buffer row-band-col-1">
-        <div class="col-md-1">
+        <div class="col-md-2">
           <p><strong>Data filters:</strong></p>
         </div>
-        <div class="col-md-11" class="filters">
+        <div class="col-md-10" class="filters">
           <div id="qFilter"></div>
         </div>
       </div>
@@ -184,17 +184,17 @@
                   <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu dropdown-menu-right chart-option-menu" aria-labelledby="dropdownMenu1">
-                  <li><a href="#" id="chart2-downloadSvg">Download chart as SVG</a></li>
-                  <li><a href="#" id="chart2-downloadPng">Download chart as PNG</a></li>
+                  <li><a href="#" id="chart1-downloadSvg">Download chart as SVG</a></li>
+                  <li><a href="#" id="chart1-downloadPng">Download chart as PNG</a></li>
                   <li class="divider"></li>
-                  <li><a href="#" id="chart2-downloadCsv">Download data in CSV</a></li>
+                  <li><a href="#" id="chart1-downloadCsv">Download data in CSV</a></li>
                 </ul>
               </div>
               <h3 class="panel-title">Distribution of answers (row-chart)</h3>
             </div>
             <div class="panel-body">
               <p>This is an example of a stacked row chart using the rowchart.js module.</p>
-              <div id="chart2-stackedRowchart"></div>
+              <div id="chart1"></div>
             </div>
           </div>
         </div>
@@ -210,17 +210,17 @@
                   <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu dropdown-menu-right chart-option-menu" aria-labelledby="dropdownMenu1">
-                  <li><a href="#" id="chart1-downloadSvg">Download chart as SVG</a></li>
-                  <li><a href="#" id="chart1-downloadPng">Download chart as PNG</a></li>
+                  <li><a href="#" id="chart2-downloadSvg">Download chart as SVG</a></li>
+                  <li><a href="#" id="chart2-downloadPng">Download chart as PNG</a></li>
                   <li class="divider"></li>
-                  <li><a href="#" id="chart1-downloadCsv">Download data in CSV</a></li>
+                  <li><a href="#" id="chart2-downloadCsv">Download data in CSV</a></li>
                 </ul>
               </div>
               <h3 class="panel-title">Distribution of answers (stacked bar-chart)</h3>
             </div>
             <div class="panel-body">
               <p>This is the same chart as a bar chart using the barchart.js module.</p>
-              <div id="chart1-barchart"></div>
+              <div id="chart2"></div>
             </div>
           </div>
         </div>
@@ -248,7 +248,7 @@
               <h3 class="panel-title">Strongly agree</h3>
             </div>
             <div class="panel-body">
-              <div id="chart3-barchart"></div>
+              <div id="chart3"></div>
             </div>
           </div>
         </div>
@@ -271,7 +271,7 @@
               <h3 class="panel-title">Agree</h3>
             </div>
             <div class="panel-body">
-              <div id="chart4-barchart"></div>
+              <div id="chart4"></div>
             </div>
           </div>
         </div>
@@ -294,7 +294,7 @@
               <h3 class="panel-title">Neither ...</h3>
             </div>
             <div class="panel-body">
-              <div id="chart5-barchart"></div>
+              <div id="chart5"></div>
             </div>
           </div>
         </div>
@@ -317,7 +317,7 @@
               <h3 class="panel-title">Disagree</h3>
             </div>
             <div class="panel-body">
-              <div id="chart6-barchart"></div>
+              <div id="chart6"></div>
             </div>
           </div>
         </div>
@@ -340,7 +340,7 @@
               <h3 class="panel-title">Strongly disagree</h3>
             </div>
             <div class="panel-body">
-              <div id="chart7-barchart"></div>
+              <div id="chart7"></div>
             </div>
           </div>
         </div>
@@ -348,6 +348,7 @@
 
 
       <!-- Example 1 Table -->
+<!--
       <div class="row row-band-col-1">
         <div class="col-md-12">
           <div class="panel panel-default">
@@ -360,6 +361,7 @@
           </div>
         </div>
       </div>
+-->
 
 
       <!-- Example 2 title and comments -->
