Added linechart graph

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       </div>
 
 
-      <!-- Example 1 Charts first row -->
+      <!-- Example 1 Charts -->
       <div class="row top-buffer row-band-col-1">
         <div class="col-md-6 col-sm-12">
           <!-- Panel with second chart: Stacked bar chart -->
@@ -226,144 +226,6 @@
         </div>
       </div>
 
-
-      <!-- Example 1 Charts second row -->
-      <div class="row top-buffer row-band-col-1">
-        <div class="col-md-5ths col-sm-12">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <!-- Dropdown menu with download options (remove what you don't want) -->
-              <div class="dropdown chart-options">
-                <button class="btn btn-default dropdown-toggle btn-xs" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  <span class="glyphicon glyphicon-cog"></span>
-                  <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu dropdown-menu-right chart-option-menu" aria-labelledby="dropdownMenu1">
-                  <li><a href="#" id="chart3-downloadSvg">Download chart as SVG</a></li>
-                  <li><a href="#" id="chart3-downloadPng">Download chart as PNG</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#" id="chart3-downloadCsv">Download data in CSV</a></li>
-                </ul>
-              </div>
-              <h3 class="panel-title">Strongly agree</h3>
-            </div>
-            <div class="panel-body">
-              <div id="chart3"></div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-5ths col-sm-12">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <!-- Dropdown menu with download options (remove what you don't want) -->
-              <div class="dropdown chart-options">
-                <button class="btn btn-default dropdown-toggle btn-xs" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  <span class="glyphicon glyphicon-cog"></span>
-                  <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu dropdown-menu-right chart-option-menu" aria-labelledby="dropdownMenu1">
-                  <li><a href="#" id="chart4-downloadSvg">Download chart as SVG</a></li>
-                  <li><a href="#" id="chart4-downloadPng">Download chart as PNG</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#" id="chart4-downloadCsv">Download data in CSV</a></li>
-                </ul>
-              </div>
-              <h3 class="panel-title">Agree</h3>
-            </div>
-            <div class="panel-body">
-              <div id="chart4"></div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-5ths col-sm-12">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <!-- Dropdown menu with download options (remove what you don't want) -->
-              <div class="dropdown chart-options">
-                <button class="btn btn-default dropdown-toggle btn-xs" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  <span class="glyphicon glyphicon-cog"></span>
-                  <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu dropdown-menu-right chart-option-menu" aria-labelledby="dropdownMenu1">
-                  <li><a href="#" id="chart5-downloadSvg">Download chart as SVG</a></li>
-                  <li><a href="#" id="chart5-downloadPng">Download chart as PNG</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#" id="chart5-downloadCsv">Download data in CSV</a></li>
-                </ul>
-              </div>
-              <h3 class="panel-title">Neither ...</h3>
-            </div>
-            <div class="panel-body">
-              <div id="chart5"></div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-5ths col-sm-12">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <!-- Dropdown menu with download options (remove what you don't want) -->
-              <div class="dropdown chart-options">
-                <button class="btn btn-default dropdown-toggle btn-xs" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  <span class="glyphicon glyphicon-cog"></span>
-                  <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu dropdown-menu-right chart-option-menu" aria-labelledby="dropdownMenu1">
-                  <li><a href="#" id="chart6-downloadSvg">Download chart as SVG</a></li>
-                  <li><a href="#" id="chart6-downloadPng">Download chart as PNG</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#" id="chart6-downloadCsv">Download data in CSV</a></li>
-                </ul>
-              </div>
-              <h3 class="panel-title">Disagree</h3>
-            </div>
-            <div class="panel-body">
-              <div id="chart6"></div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-5ths col-sm-12">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <!-- Dropdown menu with download options (remove what you don't want) -->
-              <div class="dropdown chart-options">
-                <button class="btn btn-default dropdown-toggle btn-xs" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  <span class="glyphicon glyphicon-cog"></span>
-                  <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu dropdown-menu-right chart-option-menu" aria-labelledby="dropdownMenu1">
-                  <li><a href="#" id="chart7-downloadSvg">Download chart as SVG</a></li>
-                  <li><a href="#" id="chart7-downloadPng">Download chart as PNG</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#" id="chart7-downloadCsv">Download data in CSV</a></li>
-                </ul>
-              </div>
-              <h3 class="panel-title">Strongly disagree</h3>
-            </div>
-            <div class="panel-body">
-              <div id="chart7"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-      <!-- Example 1 Table -->
-<!--
-      <div class="row row-band-col-1">
-        <div class="col-md-12">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">Table</h3>
-            </div>
-            <div class="panel-body">
-              Table goes here
-            </div>
-          </div>
-        </div>
-      </div>
--->
-
-
       <!-- Example 2 title and comments -->
       <div class="row row-band-col-2">
         <div class="col-md-12">
@@ -384,14 +246,30 @@
         </div>
       </div>
 
-      <!-- Example 2 filters -->
+      <!-- Example 2 Line chart -->
       <div class="row top-buffer row-band-col-2">
-        <div class="col-md-1">
-          <p><strong>Data filters:</strong></p>
-        </div>
-        <div class="col-md-11" class="filters">
-          <div id="gdpFilter"></div>
-        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+              <!-- Dropdown menu with download options (remove what you don't want) -->
+              <div class="dropdown chart-options">
+                <button class="btn btn-default dropdown-toggle btn-xs" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  <span class="glyphicon glyphicon-cog"></span>
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-right chart-option-menu" aria-labelledby="dropdownMenu1">
+                  <li><a href="#" id="chart3-downloadSvg">Download chart as SVG</a></li>
+                  <li><a href="#" id="chart3-downloadPng">Download chart as PNG</a></li>
+                  <li class="divider"></li>
+                  <li><a href="#" id="chart3-downloadCsv">Download data in CSV</a></li>
+                </ul>
+              </div>
+              <h3 class="panel-title">GDP Over time (Line chart)</h3>
+            </div>
+            <div class="panel-body">
+              <p>This is an example of a line chart.</p>
+              <div id="chart3"></div>
+            </div>
+          </div>
       </div>
 
 
